--- a/app/package.json
+++ b/app/package.json
@@ -19,13 +19,15 @@
   },
   "scripts": {
     "dev": "webpack -d -w",
-    "build": "webpack -p"
+    "build": "webpack -p",
+    "clean": "rm -rf dist"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
+    "file-loader": "^0.9.0",
     "webpack": "^2.2.0-rc.3"
   }
 }
