--- a/app/package.json
+++ b/app/package.json
@@ -18,8 +18,8 @@
     "url": "https://github.com/jpikl/cfxnes"
   },
   "scripts": {
-    "dev": "webpack -d -w",
-    "build": "webpack -p",
+    "dev": "webpack-dev-server -d --progress --inline --hot --open",
+    "build": "webpack -p --progress",
     "clean": "rm -rf dist"
   },
   "devDependencies": {
@@ -28,6 +28,7 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
     "file-loader": "^0.9.0",
-    "webpack": "^2.2.0-rc.3"
+    "webpack": "^2.2.0-rc.3",
+    "webpack-dev-server": "^2.2.0-rc.0"
   }
 }
