--- a/app/package.json
+++ b/app/package.json
@@ -18,17 +18,29 @@
     "url": "https://github.com/jpikl/cfxnes"
   },
   "scripts": {
-    "dev": "webpack-dev-server -d --progress --inline --hot --open",
-    "build": "webpack -p --progress",
+    "start": "node dist/app.js",
+    "build": "parallelshell 'npm run build:server' 'npm run build:client'",
+    "dev": "parallelshell 'npm run dev:server' 'npm run dev:client'",
+    "build:server": "babel -d dist src/server",
+    "build:client": "webpack -p --progress",
+    "dev:server": "nodemon -w 'src/server' -x 'NODE_ENV=dev babel-node src/server/app.js'",
+    "dev:client": "webpack-dev-server -d --progress --inline --hot --open",
     "clean": "rm -rf dist"
   },
   "devDependencies": {
+    "babel-cli": "^6.18.0",
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
     "file-loader": "^0.9.0",
+    "morgan": "^1.7.0",
+    "nodemon": "^1.11.0",
+    "parallelshell": "^2.0.0",
     "webpack": "^2.2.0-rc.3",
     "webpack-dev-server": "^2.2.0-rc.0"
+  },
+  "dependencies": {
+    "express": "^4.14.0"
   }
 }
