--- a/app/package.json
+++ b/app/package.json
@@ -18,25 +18,31 @@
     "url": "https://github.com/jpikl/cfxnes"
   },
   "scripts": {
-    "start": "node dist/app.js",
+    "start": "node dist",
     "build": "parallelshell 'npm run build:server' 'npm run build:client'",
     "dev": "parallelshell 'npm run dev:server' 'npm run dev:client'",
-    "build:server": "babel -d dist src/server",
-    "build:client": "webpack -p --progress",
-    "dev:server": "nodemon -w 'src/server' -x 'NODE_ENV=dev babel-node src/server/app.js'",
-    "dev:client": "webpack-dev-server -d --progress --inline --hot --open",
+    "build:server": "NODE_ENV=production babel -d dist src/server",
+    "build:client": "NODE_ENV=production webpack -p --progress",
+    "dev:server": "NODE_ENV=development nodemon -w 'src/server' -x 'babel-node src/server'",
+    "dev:client": "NODE_ENV=development webpack-dev-server -d --progress --inline --hot --open",
     "clean": "rm -rf dist"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
+    "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "copy-webpack-plugin": "^4.0.1",
     "file-loader": "^0.9.0",
     "morgan": "^1.7.0",
     "nodemon": "^1.11.0",
     "parallelshell": "^2.0.0",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "react-hot-loader": "^3.0.0-beta.6",
     "webpack": "^2.2.0-rc.3",
     "webpack-dev-server": "^2.2.0-rc.0"
   },
