--- a/app/src/client/.babelrc
+++ b/app/src/client/.babelrc
@@ -1,6 +1,13 @@
 {
   "presets": [
-    ["es2015", {"modules": false}], 
-    "stage-0"
-  ]
+    ["es2015", {"modules": false, "loose" : true }], 
+    "stage-0",
+    "react"
+  ],
+  "plugins": ["transform-runtime"],
+  "env": {
+    "development": {
+      "plugins": ["react-hot-loader/babel"]
+    }
+  }
 }
