--- a/app/package.json
+++ b/app/package.json
@@ -47,7 +47,10 @@
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-hot-loader": "^3.0.0-beta.6",
+    "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
+    "redux": "^3.6.0",
+    "redux-actions": "^1.2.0",
     "webpack": "^2.2.0-rc.3",
     "webpack-dev-server": "^2.2.0-rc.0"
   },
