--- a/app/package.json
+++ b/app/package.json
@@ -52,7 +52,8 @@
     "redux": "^3.6.0",
     "redux-actions": "^1.2.0",
     "webpack": "^2.2.0-rc.3",
-    "webpack-dev-server": "^2.2.0-rc.0"
+    "webpack-dev-server": "^2.2.0-rc.0",
+    "whatwg-fetch": "^2.0.1"
   },
   "dependencies": {
     "express": "^4.14.0"
