Configure eslint for app

--- a/.eslintrc
+++ b/.eslintrc
@@ -50,7 +50,7 @@
     "import/no-unresolved": "error",
     "import/order": "warn",
     "indent": ["warn", 2, {"SwitchCase": 1}],
-    "jsx-quotes": "warn",
+    "jsx-quotes": ["warn", "prefer-double"],
     "key-spacing": "warn",
     "keyword-spacing": "warn",
     "linebreak-style": "warn",
@@ -121,7 +121,6 @@
     "no-redeclare": "error",
     "no-regex-spaces": "error",
     "no-return-assign": "error",
-    "no-script-url": "error",
     "no-self-assign": "error",
     "no-self-compare": "error",
     "no-sequences": "error",
