--- a/app/package.json
+++ b/app/package.json
@@ -25,7 +25,9 @@
     "build:client": "NODE_ENV=production webpack -p --progress",
     "dev:server": "NODE_ENV=development nodemon -w 'src/server' -x 'babel-node src/server'",
     "dev:client": "NODE_ENV=development webpack-dev-server -d --progress --inline --hot --open",
+    "lint": "eslint --ext=.js,.jsx src || true",
     "clean": "rm -rf dist",
+    "prelint": "node tools/check-lib --include-debug",
     "prebuild": "node tools/check-lib",
     "prebuild:client": "node tools/check-lib",
     "predev": "node tools/check-lib --include-debug",
@@ -34,12 +36,17 @@
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-core": "^6.21.0",
+    "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "copy-webpack-plugin": "^4.0.1",
+    "eslint": "^3.13.0",
+    "eslint-import-resolver-webpack": "^0.8.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-react": "^6.9.0",
     "file-loader": "^0.9.0",
     "morgan": "^1.7.0",
     "nodemon": "^1.11.0",
