--- a/app/package.json
+++ b/app/package.json
@@ -43,14 +43,22 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.26.1",
     "eslint": "^3.13.0",
     "eslint-import-resolver-webpack": "^0.8.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-react": "^6.9.0",
+    "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "^0.9.0",
+    "font-awesome": "^4.7.0",
     "morgan": "^1.7.0",
     "nodemon": "^1.11.0",
     "parallelshell": "^2.0.0",
+    "postcss": "^5.2.9",
+    "postcss-cssnext": "^2.9.0",
+    "postcss-import": "^9.1.0",
+    "postcss-loader": "^1.2.1",
+    "postcss-url": "^5.1.2",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-hot-loader": "^3.0.0-beta.6",
@@ -58,6 +66,7 @@
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
     "redux-actions": "^1.2.0",
+    "style-loader": "^0.13.1",
     "webpack": "^2.2.0-rc.3",
     "webpack-dev-server": "^2.2.0-rc.0",
     "whatwg-fetch": "^2.0.1"
