--- a/app/package.json
+++ b/app/package.json
@@ -25,9 +25,12 @@
     "build:client": "NODE_ENV=production webpack -p --progress",
     "dev:server": "NODE_ENV=development nodemon -w 'src/server' -x 'babel-node src/server'",
     "dev:client": "NODE_ENV=development webpack-dev-server -d --progress --inline --hot --open",
-    "lint": "eslint --ext=.js,.jsx src || true",
+    "lint": "parallelshell 'npm run lint:js' 'npm run lint:css'",
+    "lint:js": "eslint --ext=.js,.jsx src || true",
+    "lint:css": "stylelint 'src/client/**/*.css' || true",
     "clean": "rm -rf dist",
     "prelint": "node tools/check-lib --include-debug",
+    "prelint:js": "node tools/check-lib --include-debug",
     "prebuild": "node tools/check-lib",
     "prebuild:client": "node tools/check-lib",
     "predev": "node tools/check-lib --include-debug",
@@ -67,6 +70,7 @@
     "redux": "^3.6.0",
     "redux-actions": "^1.2.0",
     "style-loader": "^0.13.1",
+    "stylelint": "^7.7.1",
     "webpack": "^2.2.0-rc.3",
     "webpack-dev-server": "^2.2.0-rc.0",
     "whatwg-fetch": "^2.0.1"
