--- a/app/package.json
+++ b/app/package.json
@@ -68,6 +68,7 @@
     "redux-actions": "^1.2.0",
     "style-loader": "^0.13.1",
     "stylelint": "^7.7.1",
+    "stylelint-config-standard": "^15.0.1",
     "webpack": "^2.2.0-rc.3",
     "webpack-dev-server": "^2.2.0-rc.0",
     "whatwg-fetch": "^2.0.1"
