--- a/.eslintrc
+++ b/.eslintrc
@@ -106,6 +106,7 @@
     "no-lonely-if": "warn",
     "no-mixed-operators": "warn",
     "no-mixed-spaces-and-tabs": "warn",
+    "no-multi-assign": "error",
     "no-multi-spaces": "warn",
     "no-multi-str": "warn",
     "no-multiple-empty-lines": ["warn", {"max": 1}],
@@ -168,6 +169,7 @@
     "prefer-const": "error",
     "prefer-destructuring": ["warn", {"array": false, "object": true}],
     "prefer-numeric-literals": "warn",
+    "prefer-promise-reject-errors": "error",
     "prefer-rest-params": "error",
     "prefer-spread": "error",
     "quote-props": ["warn", "consistent"],
