--- a/app/package.json
+++ b/app/package.json
@@ -27,7 +27,7 @@
     "build:server": "NODE_ENV=production babel -d dist src/server",
     "build:client": "NODE_ENV=production webpack -p --progress",
     "dev:server": "NODE_ENV=development nodemon -w 'src/server' -x 'babel-node src/server'",
-    "dev:client": "NODE_ENV=development webpack-dev-server -d --progress --inline --hot --open",
+    "dev:client": "NODE_ENV=development webpack-dev-server -d --devtool=eval-source-map --progress --inline --hot --open",
     "lint": "parallelshell 'npm run lint:js' 'npm run lint:css'",
     "lint:js": "eslint --ext=.js,.jsx src || true",
     "lint:css": "stylelint 'src/client/**/*.css' || true",
@@ -66,11 +66,12 @@
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
     "redux-actions": "^1.2.0",
+    "source-map-loader": "^0.1.6",
     "style-loader": "^0.13.1",
     "stylelint": "^7.7.1",
     "stylelint-config-standard": "^15.0.1",
-    "webpack": "^2.2.0-rc.3",
-    "webpack-dev-server": "^2.2.0-rc.0",
+    "webpack": "^2.2.0",
+    "webpack-dev-server": "^2.2.0",
     "whatwg-fetch": "^2.0.2"
   },
   "dependencies": {
