--- a/app/package.json
+++ b/app/package.json
@@ -51,6 +51,7 @@
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "^0.9.0",
     "font-awesome": "^4.7.0",
+    "lodash": "^4.17.4",
     "morgan": "^1.7.0",
     "nodemon": "^1.11.0",
     "parallelshell": "^2.0.0",
