--- a/app/package.json
+++ b/app/package.json
@@ -68,6 +68,8 @@
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
     "redux-actions": "^1.2.0",
+    "redux-promise": "^0.5.3",
+    "redux-thunk": "^2.2.0",
     "source-map-loader": "^0.1.6",
     "style-loader": "^0.13.1",
     "stylelint": "^7.7.1",
