Switch from hashHistory to browserHistory.

--- a/.eslintrc
+++ b/.eslintrc
@@ -128,6 +128,7 @@
     "no-regex-spaces": "error",
     "no-return-assign": "error",
     "no-return-await": "error",
+    "no-script-url": "error",
     "no-self-assign": "error",
     "no-self-compare": "error",
     "no-sequences": "error",
