--- a/app/package.json
+++ b/app/package.json
@@ -78,6 +78,7 @@
     "whatwg-fetch": "^2.0.2"
   },
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "express-history-api-fallback": "^2.1.0"
   }
 }
