Better npm run scripts.
- replace rm -rf by rimraf
- replace parallelshell by npm-run-all
- use cross-env to set env variables

--- a/app/package.json
+++ b/app/package.json
@@ -21,17 +21,17 @@
     "dist/"
   ],
   "scripts": {
+    "dev": "run-p dev:*",
+    "dev:server": "cross-env NODE_ENV=development nodemon -w 'src/server' -x 'babel-node src/server'",
+    "dev:client": "cross-env NODE_ENV=development webpack-dev-server -d --devtool=eval-source-map --progress --inline --hot --open",
+    "build": "run-p build:*",
+    "build:server": "cross-env NODE_ENV=production babel -d dist src/server",
+    "build:client": "cross-env NODE_ENV=production webpack -p --progress",
     "start": "node dist",
-    "build": "parallelshell 'npm run build:server' 'npm run build:client'",
-    "dev": "parallelshell 'npm run dev:server' 'npm run dev:client'",
-    "build:server": "NODE_ENV=production babel -d dist src/server",
-    "build:client": "NODE_ENV=production webpack -p --progress",
-    "dev:server": "NODE_ENV=development nodemon -w 'src/server' -x 'babel-node src/server'",
-    "dev:client": "NODE_ENV=development webpack-dev-server -d --devtool=eval-source-map --progress --inline --hot --open",
-    "lint": "parallelshell 'npm run lint:js' 'npm run lint:css'",
-    "lint:js": "NODE_ENV=development eslint --ext=.js,.jsx src",
-    "lint:css": "stylelint 'src/client/**/*.css'",
-    "clean": "rm -rf dist"
+    "lint": "run-p --continue-on-error lint:*",
+    "lint:js": "cross-env NODE_ENV=development eslint --ext=.js,.jsx src",
+    "lint:css": "cross-env NODE_ENV=development stylelint 'src/client/**/*.css'",
+    "clean": "rimraf dist"
   },
   "devDependencies": {
     "babel-cli": "^6.22.2",
@@ -44,6 +44,7 @@
     "babel-preset-stage-0": "^6.22.0",
     "classnames": "^2.2.5",
     "copy-webpack-plugin": "^4.0.1",
+    "cross-env": "^3.2.4",
     "css-loader": "^0.26.1",
     "eslint": "^3.15.0",
     "eslint-import-resolver-webpack": "^0.8.1",
@@ -55,7 +56,7 @@
     "lodash-es": "^4.17.4",
     "morgan": "^1.7.0",
     "nodemon": "^1.11.0",
-    "parallelshell": "^2.0.0",
+    "npm-run-all": "^4.0.2",
     "postcss": "^5.2.11",
     "postcss-cssnext": "^2.9.0",
     "postcss-import": "^9.1.0",
@@ -70,6 +71,7 @@
     "redux-logger": "^2.8.1",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0",
+    "rimraf": "^2.6.1",
     "source-map-loader": "^0.1.6",
     "style-loader": "^0.13.1",
     "stylelint": "^7.7.1",
