--- a/lib/package.json
+++ b/lib/package.json
@@ -35,7 +35,7 @@
     "test": "karma start --browsers=Chromium,Firefox,Opera --no-polyfills",
     "test:win": "karma start --browsers=IE,Edge --win-webdriver-host=10.0.0.4",
     "test:osx": "karma start --browsers=Safari --osx-webdriver-host=10.0.0.3",
-    "clean": "rm -rf dist",
+    "clean": "rimraf dist",
     "pretest:lib": "npm run build",
     "pretest:lib:debug": "npm run build:debug",
     "pretest": "npm run build",
@@ -64,6 +64,7 @@
     "karma-opera-launcher": "^1.0.0",
     "karma-webdriver-launcher": "^1.0.5",
     "mocha": "^3.0.2",
+    "rimraf": "^2.6.1",
     "source-map-loader": "^0.1.6",
     "watch": "^1.0.1"
   }
