Display connected gamepads

--- a/app/src/client/.eslintrc
+++ b/app/src/client/.eslintrc
@@ -68,7 +68,6 @@
   },
   "globals": {
     "__DEVELOPMENT__": true,
-    "__LOG_LEVEL__": true,
-    "__REDUX_DEVTOOLS_EXTENSION_COMPOSE__": true
+    "__LOG_LEVEL__": true
   }
 }
