--- a/app/package.json
+++ b/app/package.json
@@ -69,7 +69,7 @@
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
     "redux-logger": "^2.8.1",
-    "redux-promise": "^0.5.3",
+    "redux-promise": "dreampulse/redux-promise",
     "redux-thunk": "^2.2.0",
     "rimraf": "^2.6.1",
     "source-map-loader": "^0.1.6",
