--- a/app/.postcssrc
+++ b/app/.postcssrc
@@ -1,5 +1,6 @@
 {
   "plugins": {
+    "postcss-font-family-system-ui": {},
     "postcss-import": {},
     "postcss-cssnext": {},
     "postcss-url": {}
