--- a/app/package.json
+++ b/app/package.json
@@ -59,6 +59,7 @@
     "npm-run-all": "^4.0.2",
     "postcss": "^5.2.11",
     "postcss-cssnext": "^2.9.0",
+    "postcss-font-family-system-ui": "^2.0.1",
     "postcss-import": "^9.1.0",
     "postcss-loader": "^1.2.2",
     "postcss-url": "^5.1.2",
