--- a/app/package.json
+++ b/app/package.json
@@ -34,55 +34,57 @@
     "clean": "rimraf dist"
   },
   "devDependencies": {
-    "babel-cli": "^6.22.2",
-    "babel-core": "^6.22.1",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.22.0",
-    "babel-preset-stage-0": "^6.22.0",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "classnames": "^2.2.5",
     "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^3.2.4",
-    "css-loader": "^0.26.1",
-    "eslint": "^3.15.0",
+    "cross-env": "^5.0.0",
+    "css-loader": "^0.28.1",
+    "eslint": "^3.19.0",
     "eslint-import-resolver-webpack": "^0.8.1",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-react": "^6.9.0",
-    "extract-text-webpack-plugin": "^2.0.0-beta.4",
-    "file-loader": "^0.9.0",
+    "eslint-plugin-react": "^7.0.1",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.1",
     "font-awesome": "^4.7.0",
     "lodash-es": "^4.17.4",
-    "morgan": "^1.7.0",
+    "morgan": "^1.8.1",
     "nodemon": "^1.11.0",
     "npm-run-all": "^4.0.2",
-    "postcss": "^5.2.11",
-    "postcss-cssnext": "^2.9.0",
+    "postcss": "^6.0.1",
+    "postcss-cssnext": "^2.11.0",
     "postcss-font-family-system-ui": "^2.0.1",
-    "postcss-import": "^9.1.0",
-    "postcss-loader": "^1.2.2",
-    "postcss-url": "^5.1.2",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-hot-loader": "^3.0.0-beta.6",
-    "react-redux": "^5.0.2",
-    "react-router": "^3.0.2",
+    "postcss-import": "^10.0.0",
+    "postcss-loader": "^2.0.5",
+    "postcss-url": "^6.1.0",
+    "prop-types": "^15.5.10",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-hot-loader": "3.0.0-beta.7",
+    "react-redux": "^5.0.5",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
-    "redux-logger": "^2.8.1",
+    "redux-logger": "^3.0.6",
     "redux-promise": "dreampulse/redux-promise",
     "redux-thunk": "^2.2.0",
     "rimraf": "^2.6.1",
-    "source-map-loader": "^0.1.6",
-    "style-loader": "^0.13.1",
-    "stylelint": "^7.7.1",
-    "stylelint-config-standard": "^15.0.1",
-    "webpack": "^2.2.0",
-    "webpack-dev-server": "^2.2.0",
-    "whatwg-fetch": "^2.0.2"
+    "source-map-loader": "^0.2.1",
+    "style-loader": "^0.17.0",
+    "stylelint": "^7.10.1",
+    "stylelint-config-standard": "^16.0.0",
+    "webpack": "^2.5.1",
+    "webpack-dev-server": "^2.4.5",
+    "whatwg-fetch": "^2.0.3"
   },
   "dependencies": {
-    "express": "^4.14.0",
-    "express-history-api-fallback": "^2.1.0"
+    "express": "^4.15.3",
+    "express-history-api-fallback": "^2.2.1"
   }
 }
