--- a/app/src/client/.eslintrc
+++ b/app/src/client/.eslintrc
@@ -20,9 +20,11 @@
   "rules": {
     "no-invalid-this": "off",
     "import/no-unassigned-import": "off",
+    "react/default-props-match-prop-types": "warn",
     "react/forbid-component-props": ["error", {"forbid": ["style"]}],
     "react/jsx-boolean-value": "warn",
     "react/jsx-closing-bracket-location": ["warn", "after-props"],
+    "react/jsx-closing-tag-location": "warn",
     "react/jsx-curly-spacing": "warn",
     "react/jsx-equals-spacing": "warn",
     "react/jsx-filename-extension": "warn",
@@ -50,6 +52,7 @@
     "react/no-find-dom-node": "error",
     "react/no-is-mounted": "error",
     "react/no-multi-comp": ["error", {"ignoreStateless": true}],
+    "react/no-redundant-should-component-update": "error",
     "react/no-render-return-value": "error",
     "react/no-string-refs": "error",
     "react/no-unescaped-entities": "warn",
