--- a/app/package.json
+++ b/app/package.json
@@ -67,6 +67,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-hot-loader": "3.0.0-beta.7",
+    "react-rangeslider": "^2.1.0",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
